refactor: move Settings to :data:settings
Refactor data implementation of settings to a dedicated layer for better separation of concerns. This is part of ongoing refactoring. Settings repo, data preferences, di were all included in this move